syntax = "proto3";
option java_multiple_files = true;
package com.demidrolll.pet.bank.domain.client.api;

message CreateClientRequest {
  string firstName = 1;
  string lastName = 2;
  string middleName = 3;
  Sex sex = 4;
  int64 birthDate = 5;
}

message CreateClientResponse {
  Result result = 1;
}

enum Sex {
  MAN = 0;
  WOMAN = 1;
  OTHER = 2;
}

enum Result {
  SUCCESS = 0;
  FAIL = 1;
}

service ClientService {
  rpc create(CreateClientRequest) returns (CreateClientResponse);
}
